# yolov8_ros_real

./: README.md
happymimi2_recognition_msgs/: CMakeLists.txt  package.xml
happymimi2_recognition_msgs/msg/: ObjectDetect.msg  ObjectDetectArray.msg
recognition_processing/: package.xml  setup.py
yolov8_ros/: package.xml  setup.py
yolov8_ros/yolov8_ros/: yolov8_object_detection.py  yolov8_segmentation.py
